<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.awairhomeassignment.domain.model.Event" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@android:color/white"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTv"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_title"
            tools:text="@string/event_details_title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@{model.title}"
            android:layout_marginStart="15dp"
            tools:text="Nap Break"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@+id/titleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleTv"/>

        <TextView
            android:id="@+id/startDateTv"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_start_date"
            tools:text="@string/event_details_start_date"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/titleTv"
            app:layout_constraintEnd_toStartOf="@+id/startDate"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:date="@{model.start}"
            android:layout_marginStart="15dp"
            tools:text="1999-10-12"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@+id/startDateTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startDateTv"/>

        <TextView
            android:id="@+id/endDateTv"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details_end_date"
            tools:text="@string/event_details_end_date"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/startDateTv"
            app:layout_constraintEnd_toStartOf="@+id/endDate"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:date="@{model.end}"
            android:layout_marginStart="15dp"
            tools:text="1999-10-12"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@+id/endDateTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/endDateTv"/>

        <TextView
            android:id="@+id/dateError"
            android:background="@android:color/holo_red_light"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_details_date_error"
            app:check_date="@{model}"
            android:visibility="gone"
            tools:text="@string/event_details_date_error"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/endDateTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/overlap"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_details_overlap"
            tools:text="@string/event_details_overlap"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/endDateTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/overlapList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overlap" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
